--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/ejml-0.15.jar" sourcepath="C:/libs/ejml/src"/>
+	<classpathentry kind="lib" path="libs/ejml-0.15.jar"/>
 	<classpathentry kind="lib" path="trove-2.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
